final notebook additions

--- a/eggyrice.html
+++ b/eggyrice.html
@@ -7,7 +7,7 @@
   <!-- Basic Page Info
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>spurge eats</title>
+  <title>spurge eats eggy rice</title>
   <meta name="description" content="Spurge Eats">
   <meta name="author" content="Spurge Eats">
 
@@ -123,7 +123,7 @@
 
 <!-- IMG : works-item -->
               <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/bean.png"/>
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/eggyrice.png"/>
               </div>
 <!-- end : works-item -->
 
@@ -131,7 +131,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                         <article class="text-left  worktext pad-top-half pad-bottom-half">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p><br>
+                          <p>The eggy rice!! This one changed my life. I’m not sure what this dish is supposed to be called, but hopefully calling it eggy rice is not offensive.  The first time you made this, I was astounded. So simple, and yet so delicious. So easy! Inject it into my veins. Again, you know how to make this, but I will repeat the recipe for documentation’s sake. One time you made two sauces to go alongside that were bomb - please advise on the ingredients.</p><br>
                     </article>
               </div>
 <!-- end : works-item -->
@@ -139,12 +139,13 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
               <article class="text-center medletters">
-              <h2>egg yolks</h2>
-              <h2>rigatoni</h2>
-              <h2>salt</h2>
-              <h2>pep</h2>
-              <h2>ingredient</h2>
-              <h2>ingredient</h2>
+              <h2>rice</h2>
+              <h2>chicken or veg stock</h2>
+              <h2>eggs</h2>
+              <h2>furikake</h2>
+              <h2>soy sauce</h2>
+              <h2>avocado, optional</h2>
+              <h2>cilantro, chopped, optional</h2>
             </article>
               </div>
 <!-- end : works-item -->
@@ -152,9 +153,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                         <article class="text-left  worktext pad-top-half pad-bottom-half">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p><br>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p><br>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p><br>
+                          <p>Get the rice going in the rice cooker with chicken or veggie stock, or water if neither are available. Once I used a miso veggie stock from Trader Joe’s that was truly chef’s kiss. Mix up an egg with a fork in a small bowl, and when the rice is “almost there,” mix in the egg. Cover again, until the rice cooker switches off. Put in a bowl, top with furikake, soy sauce, a few slices of avo, and a bit of cilantro, and enjoy. Multiple times.</p><br>
 
                     </article>
               </div>
@@ -163,7 +162,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso">
-                          <a href="notebook.html" class="font3 menutitle">eat more...</a>
+                          <a href="breakfast.html" class="font3 menutitle">eat more...</a>
                     </article>
               </div>
 <!-- end : works-item -->
