--- a/notebook.html
+++ b/notebook.html
@@ -187,15 +187,6 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ahituna.png"/>
-                          <a href="ahituna.html" >ahi tuna</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half shared">
-                    <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ethiopian.png"/>
                           <a href="ethiopian.html">ras ethiopian platter</a>
                     </article>                    
@@ -203,7 +194,16 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byteah">
+              <div class="works-item chrome-fix works-item-one-half shared">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ahituna.png"/>
+                          <a href="ahituna.html" >ahi tuna at home</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ravioli.png"/>
                           <a href="ravioli.html">sexy ravioli</a>
@@ -266,14 +266,14 @@
 <!-- end : works-item -->
 
 
-<!-- TEXT : works-item -->
+<!-- TEXT : works-item 
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/carroutsoup.png"/>
                           <a href="carroutsoup.html">carrot soup</a>
                     </article>                    
               </div>
-<!-- end : works-item -->
+end : works-item -->
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half byteah">
@@ -284,16 +284,24 @@
               </div>
 <!-- end : works-item -->
 
-
-
 <!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah byspurge shared">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/more.png"/>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+
+
+<!-- TEXT : works-item 
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/carbonara.png"/>
                           <a href="carbonara.html">carbonara pasta</a>
                     </article>                    
               </div>
-<!-- end : works-item -->
+ end : works-item -->
 
 
               </section>
